      AST_agent_timeclock_detail.php,
      AST_campaign_status_list_report.php,
      AST_inbound_daily_report.php,
      AST_inbound_forecasting.php,
      AST_performance_comparison_report.php,
      AST_team_performance_detail.php,
      Erlang_report.php,
      fcstats.php,
      fcstats_detail.php,
      timeclock_report.php : Fixed javascript/apache errors with graphs.
    - graphcanvas.inc:_ Fixed javascript/apache errors with graphs by removing 
        "echo" lines
    - non_agent_api.php: Add monitor type 'HIJACK'.
  * Add upstream Rev. 2842:
    - MySQL_AST_CREATE_tables.sql,
      upgrade_2.14.sql: Update to upstrem DB version 1523.
    - vdc_db_query.php,
      admin.php: Added code for campaign scheduled callback email alerts.
    - help.php: Added campaigns-scheduled_callbacks_email_alert entry.
  * New extras/mysql_update/mysql-1523.sql (2017-044).
  * Add upstream Rev. 2843:
    - admin.php: Added server function to clear agent conferences.
  * Add upstream Rev. 2844:
    - dispo_send_email.php: Added call_notes option.
  
2.25.14

  [Jörg Frings-Fürst]
  * Add favicon.ico (2017-038).
  * New Report_log_partX.php (2017-039).
  * Add upstream Rev. 2837:
    - ADMIN_keepalive_ALL.pl: Added process debug with --DebugXXX flag and
        screen logging.
    - ADMIN_restart_roll_logs.pl: Added rolling of proccess screenlogs.
  * Add upstream Rev. 2838:
    - New cm_cid_change.agi.
    - cm_dnc.agi: Added ability to recognize existing Vicidial calls.
  * Add upstream Rev. 2839:
    - agi-VDAD_ALL_inbound.agi: Bug fix for on-hook agents using
        Asterisk 1.8 & 11.
  * Add upstream Rev. 2840:
    - QUEUEMETRICS.txt: Add new crontab line.
    - MySQL_AST_CREATE_tables.sql,
      upgrade_2.14.sql: Update to upstrem DB version 1522.
    - vicidial.php: Added webphone_layout options.
    - admin.php: Added webphone_layout option to phones and user groups.
    - help.php: Added webphone_layout entries.